--- a/Document/大数计算.md
+++ b/Document/大数计算.md
@@ -1,5 +1,17 @@
 https://blog.csdn.net/wenqiang1208/article/details/69669084
 
+
+# 求中间值 防止越界
+一般给了start 和end的序号 ，求中间值
+可以使用 
+
+	mid= (start+end)/2 
+
+但是如果start和end的数值过大，start+end可能会越界。
+所以这种情况下，一般使用  移位的方法:
+
+	mid=start + (end-start)>>1
+
 # 问题1 给40亿个不重复的unsigned int的整数，没排过序的，然后再给一个数，如何快速判断这个数是否在那40亿个数当中？
 
 问题分析：40亿 ?不重复 ，没有排序。
