--- a/Document/进程和线程的区别和选择.md
+++ b/Document/进程和线程的区别和选择.md
@@ -1,4 +1,5 @@
-线程与进程最大的区别在于，线程是调度的基本单位，而进程则是资源拥有的基本单位。说白了，所谓内核中的任务调度，实际上的调度对象是线程；而进程只是给线程提供了虚拟内存、全局变量等资源。所以，对于线程和进程，我们可以这么理解：
+线程与进程最大的区别在于，线程是调度的基本单位，而进程则是资源拥有的基本单位。
+说白了，所谓内核中的任务调度，实际上的调度对象是线程；而进程只是给线程提供了虚拟内存、全局变量等资源。所以，对于线程和进程，我们可以这么理解：
 
 当进程只有一个线程时，可以认为进程就等于线程。
 
@@ -8,3 +9,6 @@
 
 
 进程是线程的容器.
+
+多线程之间，可以同时存在，但是进程一旦退出，则多线程都将消失。
+多进程之间，相互独立，虽然可以通过ipc，但是一个进程的退出，别的进程依然可以继续。
