--- a/Document/大数计算.md
+++ b/Document/大数计算.md
@@ -108,7 +108,7 @@ https://blog.csdn.net/wenqiang1208/article/details/69669084
 这样空间和时间的复杂度都是O(n)。
 
 
-#问题八  有两个字符串数组： string src[]  和 string des[]，每个字符串数组的长度都是10W跳左右，每个字符的 size<1KB ，设计一个算法 查找 两个字符串数组中想交的字符串。
+#问题八  有两个字符串数组： string src[]  和 string des[]，每个字符串数组的长度都是10W跳左右，每个字符的 size<1KB ，设计一个算法 查找 两个字符串数组中相交的字符串。
 
 解析方法：
 
