--- a/Document/现场程序题目.md
+++ b/Document/现场程序题目.md
@@ -94,10 +94,11 @@ strcpy会赋值字符串末尾的'\0'的
 返回指向 dest 的指针
 
 
-	char * MyStrcpy(char * strDest,const char * strSrc)
+	char * MyStrcpy(char * strDest, const char * strSrc)
 	{
 		assert(strDest!=NULL );//保持程序鲁棒性
 		assert( strSrc!=NULL );
+		//不能改变入参的指向
 	    char * strDestCopy=strDest;
 	    //先复制，再判断 ， 实际上已经把最后一个 \0复制进去了，如果自己写 ，需要注意添加 最后一个 \0;
 	    while ((*strDest++=*strSrc++)!='\0');
@@ -333,6 +334,4 @@ size_t 32位系统为32位，64位系统为64位。
 	}  
 	
 https://blog.csdn.net/youbang321/article/details/7888138
-
-
 https://www.cnblogs.com/niocai/archive/2012/05/04/2483133.html
