--- a/ModelTest/用过的设计模式.md
+++ b/ModelTest/用过的设计模式.md
@@ -39,3 +39,10 @@ STL中又大量的使用
 
 这种情况下要直接用两个类就会有大量的业务逻辑要在客户端进行处理，当命令增加，对每个命令的控制增加时，就会在Client里面产生大量的变化点，这样耦合就出来了，但是采用命令模式之后，对着一系列的命令我们都可以进行控制，这就是对变化点的封装，实际Invoker代码如下
 
+
+#8 代理模式
+
+代理提供结构
+被代理者提供真实的实现
+
+
