--- a/使用过的开源软件.md
+++ b/使用过的开源软件.md
@@ -2,3 +2,7 @@ zookeeper
 boost
 tinyxml
 gtest/gmock
+guid     lets you generate and validate unique identifiers
+protobuf 
+zlib  Ñ¹Ëõ½âÑ¹
+libssh2
