--- a/工具软件.md
+++ b/工具软件.md
@@ -74,4 +74,11 @@ mark   https://www.vim.org/scripts/script.php?script_id=1238
 
 
 
+# chrome 插件
+
+https://www.cnblogs.com/wi100sh/p/5701525.html
+
+
+
+
 
