--- a/工具软件.md
+++ b/工具软件.md
@@ -72,6 +72,9 @@ https://www.vim.org/scripts/script.php?script_id=1026
 mark   https://www.vim.org/scripts/script.php?script_id=1238
 全文标记文字
 
+# 代码检查软件
+lint
+
 
 
 # chrome 插件
