--- a/工具软件.md
+++ b/工具软件.md
@@ -82,6 +82,15 @@ lint
 https://www.cnblogs.com/wi100sh/p/5701525.html
 
 
-
+dark reader
+vimium
+tampermokey
+adblock
+momentum
+the great suspender
+githuber
+octotree
+sourcegraph
+githubmate
 
 
