--- a/DataStrutAndAlgo/排序算法的稳定性.md
+++ b/DataStrutAndAlgo/排序算法的稳定性.md
@@ -1,7 +1,5 @@
 什么是算法的稳定性
 
-
-
 什么情况使用稳定性算法
 排序算法的稳定性问题
 
@@ -9,15 +7,15 @@
 可以参考《Algorithms in C++ Parts 1-4》有关排序算法的章节稳定性的描述
 定义6.1 如果排序后的文件中拥有相同键的项的相对位置不变，则这种排序方式是稳定的
 
-假定在待排序的记录序列中，存在多个具有相同的关键字的记录，若经过排序，这些记录的相对次序保持不变，即在原序列中，r[i]=r[j]，且r[i]在r[j]之前，而在排序后的序列中，r[i]仍在r[j]之前，则称这种排序算法是稳定的；否则称为不稳定的。
+假定在待排序的记录序列中，存在多个具有相同的关键字的记录，若经过排序，这些记录的相对次序保持不变，   
+即在原序列中，r[i]=r[j]，且r[i]在r[j]之前，而在排序后的序列中，r[i]仍在r[j]之前，则称这种排序算法是稳定的；否则称为不稳定的。
 
 
 
 是否需要稳定排序是根据需求来的。
-比方说，你现在手上有一份按照学号排序的学生成绩单。你想按照成绩高低重新进行排序，对于成绩一样的学生，还是遵循原来的学号顺序。这时候就要稳定排序了。
+比方说，你现在手上有一份按照学号排序的学生成绩单。   
+你想按照成绩高低重新进行排序，对于成绩一样的学生，还是遵循原来的学号顺序。这时候就要稳定排序了。
 
 
-正解 在此排序规则中相等的元素依然保持排序前的状态
-
-
+正解 在此排序规则中相等的元素依然保持排序前的状态:  
 https://www.cnblogs.com/end/archive/2011/10/22/2220995.html
