--- a/DataStrutAndAlgo/贪心算法和动态规划.md
+++ b/DataStrutAndAlgo/贪心算法和动态规划.md
@@ -12,12 +12,13 @@
 又如：n=4时，4个整数7，13，4，246，连成的最大整数为7424613。
 输入：n个数
 输出：连成的多位数
-算法分析：此题很容易想到使用贪心法，在考试时有很多同学把整数按从大到小的顺序连接起来，测试题目的例子也都符合，但最后测试的结果却不全对。按这种标 准，我们很容易找到反例：12，121应该组成12121而非12112，那么是不是相互包含的时候就从小到大呢？也不一定，如12，123就是 12312而非12123，这种情况就有很多种了。是不是此题不能用贪心法呢？其实此题可以用贪心法来求解，只是刚才的标准不对，正确的标准是：先把整数转换成字符串，然后在比较a+b和b+a，如果a+b>=b+a，就把a排在b的前面，反之则把a排在b的后面。
+算法分析：此题很容易想到使用贪心法，在考试时有很多同学把整数按从大到小的顺序连接起来，测试题目的例子也都符合，但最后测试的结果却不全对。按这种标 准，我们很容易找到反例：12，121应该组成12121而非12112，那么是不是相互包含的时候就从小到大呢？
+也不一定，如12，123就是 12312而非12123，这种情况就有很多种了。
+是不是此题不能用贪心法呢？其实此题可以用贪心法来求解，只是刚才的标准不对，正确的标准是：先把整数转换成字符串，然后在比较a+b和b+a，如果a+b >= b+a，就把a排在b的前面，反之则把a排在b的后面。
 
-动态规划算法
-
+动态规划算法:  
 与贪心法的区别：不是由上一步的最优解直接推导下一步的最优解，所以需要记录上一步的所有解 （下例中的F[i][j]就表示第i行的j个解)
 
-能使用动态规划算法的条件：
-
-如果一个问题被划分各个阶段之后，阶段I中的状态只能由阶段I-1中的状态通过状态转移方程得来，与其它状态没有关系，特别是与未发生的状态没有关系，那么这个问题就是“无后效性”的，可以用动态规划算法求解
+能使用动态规划算法的条件：   
+如果一个问题被划分各个阶段之后，阶段I中的状态只能由阶段I-1中的状态通过状态转移方程得来，   
+与其它状态没有关系，特别是与未发生的状态没有关系，那么这个问题就是“无后效性”的，可以用动态规划算法求解
