--- a/c内存分布/基本分布.md
+++ b/c内存分布/基本分布.md
@@ -1,11 +1,137 @@
 # c语言内存分布
 
+
+## ELF 文件的组成
 https://blog.csdn.net/liuchunjie11/article/details/80431184
 
+ELF分为三种类型：.o 可重定位文件(relocalble file)，可执行文件以及共享库(shared library)，三种格式基本上从结构上是一样的，只是具体到每一个结构不同。
+
+
+首先，你需要知道的是所谓对象文件(Object files)有三个种类：
+
+1) 可重定位的对象文件(Relocatable file)
+
+这是由汇编器汇编生成的 .o 文件。后面的链接器(link editor)拿一个或一些 Relocatable object files 作为输入，经链接处理后，生成一个可执行的对象文件 (Executable file) 或者一个可被共享的对象文件(Shared object file)。我们可以使用 ar 工具将众多的 .o Relocatable object files 归档(archive)成 .a 静态库文件。如何产生 Relocatable file，你应该很熟悉了，请参见我们相关的基本概念文章和JulWiki。另外，可以预先告诉大家的是我们的内核可加载模块 .ko 文件也是 Relocatable object file。
+
+2) 可执行的对象文件(Executable file)
+
+这我们见的多了。文本编辑器vi、调式用的工具gdb、播放mp3歌曲的软件mplayer等等都是Executable object file。你应该已经知道，在我们的 Linux 系统里面，存在两种可执行的东西。除了这里说的 Executable object file，另外一种就是可执行的脚本(如shell脚本)。注意这些脚本不是 Executable object file，它们只是文本文件，但是执行这些脚本所用的解释器就是 Executable object file，比如 bash shell 程序。
+
+3) 可被共享的对象文件(Shared object file)
+
+这些就是所谓的动态库文件，也即 .so 文件。如果拿前面的静态库来生成可执行程序，那每个生成的可执行程序中都会有一份库代码的拷贝。如果在磁盘中存储这些可执行程序，那就会占用额外的磁盘空间；另外如果拿它们放到Linux系统上一起运行，也会浪费掉宝贵的物理内存。如果将静态库换成动态库，那么这些问题都不会出现。动态库在发挥作用的过程中，必须经过两个步骤：
+
+a) 链接编辑器(link editor)拿它和其他Relocatable object file以及其他shared object file作为输入，经链接处理后，生存另外的 shared object file 或者 executable file。
+
+b) 在运行时，动态链接器(dynamic linker)拿它和一个Executable file以及另外一些 Shared object file 来一起处理，在Linux系统里面创建一个进程映像。
+
+以上所提到的 link editor 以及 dynamic linker 是什么东西，你可以参考我们基本概念中的相关文章。对于什么是编译器，汇编器等你应该也已经知道，在这里只是使用他们而不再对他们进行详细介绍。为了下面的叙述方便，你可以下载test.tar.gz包，解压缩后使用"make"进行编译。编译完成后，会在目录中生成一系列的ELF对象文件，更多描述见里面的 README 文件。我们下面的论述都基于这些产生的对象文件。
+
+
+下面我们就从整体上看看这3种格式从文件内容上存储的方式，spec上有张图是比较经典的：如上图：
+
+其实从文件存储的格式来说，上面的两种view实际上是一样的，Segment实际上就是由section组成的，将相应的一些section映射到一起就叫segment了,就是说segment是由0个或多个section组成的，实际上本质都是section。
+
+在这里我们首先来仔细了解一下section和segment的概念：
+
+section就是相同或者相似信息的集合，比如我们比较熟悉的.text .data  .bss section，
+
+.text是可执行指令的集合，
+.data是初始化后数据的集合，
+.bss是未初始化数据的集合。
+
+实际上我们也可以将一个程序的所有内容都放在一起，就像dos一样，但是将可执行程序分成多个section是很有好处的，
+比如说我们可以将.text section放在memory的只读空间内，将可变的.data section放在memory的可写空间内。
+
+
+
+
+从可执行文件的角度来讲，如果一个数据未被初始化那就不需要为其分配空间，
+所以.data和.bss一个重要的区别就是.bss并不占用可执行文件的大小，
+它只是记载需要多少空间来存储这些未初始化数据，而不分配实际的空间。
+
+
+## 可执行文件 加载前后的 区别
+
+站在汇编语言的角度，一个程序分为：
+
+            数据段 -- DS
+            堆栈段 -- SS
+            代码段 -- CS
+            扩展段 -- ES
+
+站在高级语言的角度，根据APUE，一个程序分为如下段：
+
+        text
+        data (initialized)
+        bss
+        stack
+        heap
+
+        1.一般情况下，一个可执行二进制程序(更确切的说，在Linux操作系统下为一个进程单元，在UC/OSII中被称为任务)在存储(没有调入到内存运行)时拥有3个部分，分别是代码段(text)、数据段(data)和BSS段。这3个部分一起组成了该可执行程序的文件。
+
+★★可执行二进制程序 = 代码段(text)＋数据段(data)+BSS段★★
+
+        2.而当程序被加载到内存单元时，则需要另外两个域：堆域和栈域。图1-1所示为可执行代码存储态和运行态的结构对照图。一个正在运行的C程序占用的内存区域分为代码段、初始化数据段、未初始化数据段(BSS)、堆、栈5个部分。
+
+★★正在运行的C程序 = 代码段+初始化数据段(data)+未初始化数据段(BSS)+堆+栈★★
+
+       3.在将应用程序加载到内存空间执行时，操作系统负责代码段、数据段和BSS段的加载，并将在内存中为这些段分配空间。栈亦由操作系统分配和管理，而不需要程序员显示地管理；堆段由程序员自己管理，即显示地申请和释放空间。
+
+       4.动态分配与静态分配，二者最大的区别在于:
+                1. 直到Run-Time的时候，执行动态分配，而在compile-time的时候，就已经决定好了分配多少Text+Data+BSS+Stack。
+                2. 通过malloc()动态分配的内存，需要程序员手工调用free()释放内存，否则容易导致内存泄露，而静态分配的内存则在进程执行结束后系统释放(Text, Data), 但Stack段中的数据很短暂，函数退出立即被销毁。
+
+
+
+
+a.out 的地址空间       进程逻辑地址空间
+
+                      命令行参数和环境变量等
+          高地址  64M  stack  栈
+
+head                   heap 堆
+text                   bss
+data                   data
+其他        低地址  0  text   0
+
+
+
+## 各个段的内容
+
+代码段 --text（code segment/text segment）
+text段在内存中被映射为只读，但.data和.bss是可写的。
+text段是程序代码段，在AT91库中是表示程序段的大小，它是由编译器在编译连接时自动计算的，当你在链接定位文件中将该符号放置在代码段后，那么该符号表示的值就是代码段大小，编译连接时，该符号所代表的值会自动代入到源程序中。
+
+数据段 -- data
+data包含静态初始化的数据，所以有初值的全局变量和static变量在data区。段的起始位置也是由连接定位文件所确定，大小在编译连接时自动分配，它和你的程序大小没有关系，但和程序使用到的全局变量，常量数量相关。数据段属于静态内存分配。 
+
+bss段--bss
+bss是英文Block Started by Symbol的简称，通常是指用来存放程序中未初始化的全局变量的一块内存区域，在程序载入时由内核清0。
+BSS段属于静态内存分配。它的初始值也是由用户自己定义的连接定位文件所确定，用户应该将它定义在可读写的RAM区内，源程序中使用malloc分配的内存就是这一块，它不是根据data大小确定，主要由程序中同时分配内存最大值所确定，不过如果超出了范围，也就是分配失败，可以等空间释放之后再分配。BSS段属于静态内存分配。
+
+stack：
+栈(stack)保存函数的局部变量（但不包括static声明的变量， static 意味着 在数据段中 存放变量），参数以及返回值。是一种“后进先出”（Last In First Out，LIFO）的数据结构，这意味着最后放到栈上的数据，将会是第一个从栈上移走的数据。对于哪些暂时存贮的信息，和不需要长时间保存的信息来说，LIFO这种数据结构非常理想。在调用函数或过程后，系统通常会清除栈上保存的局部变量、函数调用信息及其它的信息。栈另外一个重要的特征是，它的地址空间“向下减少”，即当栈上保存的数据越多，栈的地址就越低。栈（stack）的顶部在可读写的RAM区的最后。
+
+heap:
+堆(heap)保存函数内部动态分配内存，是另外一种用来保存程序信息的数据结构，更准确的说是保存程序的动态变量。堆是“先进先出”（First In first Out，FIFO）数据结构。它只允许在堆的一端插入数据，在另一端移走数据。堆的地址空间“向上增加”，即当堆上保存的数据越多，堆的地址就越高。
+
+
+所以可以知道传入的参数,局部变量,都是在栈顶分布,随着子函数的增多而向下增长.
+函数的调用地址(函数运行代码),全局变量,静态变量都是在分配内存的低部存在,而malloc分配的堆则存在于这些内存之上,并向上生长.
+
+
+
+gcc -g main.c
+
+# 定位手段：
+可以通过命令 $ readelf -l a.out 查看文件的格式和组成。
 
 # 各种类型的存储断
 
 和各个类型变量存储的位置
+
+
 
 
 # attribute操作段
